--- a/test.html
+++ b/test.html
@@ -10,9 +10,11 @@
             overflow:hidden;
             COLOR: #FFFFFF
             }
-        canvas {
-            //border:1px white solid; 
-        }
+        canvas { 
+            position:absolute; 
+            top:0;
+            left:0; 
+            visibility: hidden; }
 
         </style> 
     </head>
