Much nicer, working version

--- a/test.html
+++ b/test.html
@@ -22,6 +22,8 @@
     
     <body>
         <script src="bit-array.js"></script><br />
+        <script src="base64.js"></script><br />
+        <script src="canvas2image.js"></script><br />
         <script src="cellularAutomata.js"></script><br />
     </body>
     
