adding details class

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <button type="button" id="rule_submit" onClick="ruleSubmit();">Change Rule</button>
             </p>
         </div>
+        <div class="details" id="details">
+
+        </div>
     </body>
     
     
