--- a/index.html
+++ b/index.html
@@ -13,24 +13,26 @@
         <script src="cellularAutomata.js"></script>
         <div class="ca" id="ca"></div>
         <div class="control_panel" id="control_panel">
-            <p><h3> Cellular Automata Rule Explorer</h3></p>
-            <hr />
-            <ul>
-                <li> [Space Bar] pause and unpause</li>
-                <li> [Left Arrow] decrement rule by one</li> 
-                <li> [Right Arrow] increment rule by one</li> 
-                <li> [s] save current image</li> 
-                <li> [r] reset the image</li> 
-            </ul>
-            <hr />
-            <p>
-                Rule #
-                <input id="rule_textbox" type="text" value="30" onkeypress="textReturn(event);" />
-                <button type="button" id="rule_submit" onClick="ruleSubmit();">Change Rule</button>
-            </p>
-        </div>
-        <div class="details" id="details">
-
+            <div class="column1" id="column1">
+                <h3> Cellular Automata Rule Explorer</h3>
+                <hr />
+                <ul>
+                    <li> [Space Bar] pause and unpause</li>
+                    <li> [Left Arrow] decrement rule by one</li> 
+                    <li> [Right Arrow] increment rule by one</li> 
+                    <li> [s] save current image</li> 
+                    <li> [r] reset the image</li> 
+                </ul>
+                <hr />
+                <p>
+                    Rule #
+                    <input id="rule_textbox" type="text" value="30" />
+                    <button type="button" id="rule_submit">Change Rule</button>
+                </p>
+            </div>
+            <div class="column2" id="column2">
+                <canvas id="detail_can" class="detail_can"></canvas>
+            </div>
         </div>
     </body>
     
