--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
 <!DOCTYPE HTML>
+
+<!-- By rob at archetyp.al
+
+Inspired by the one dimensional cellular-automata explored by
+Stephen Wolfram in "A New Kind of Science".
+
+There are many implementations of the one dimensional CA, but
+this particular project is meant to allow the user to explore the
+properties of the various rules by starting from initial conditions
+other than a single "on" cell in the center.
+
+This version still begins with the typical single "on" cell in the
+center at the first time-step or after a reset (r). However, the user
+can change the rule at any step, causing the output of the previous
+rule to be the input of the next rule. This leads to discoveries and
+an enjoyable interaction with the system and sense for how it works
+that does not come from merely reading about it or watching a single
+rule play out.  -->
+
+
 <html lang="en"> 
     <meta charset="utf-8"> 
     <head>
@@ -15,6 +35,7 @@
         <div class="control_panel" id="control_panel">
             <div class="column1" id="column1">
                 <h3> Cellular Automata Rule Explorer</h3>
+                   <p class="address">by rob at archetyp.al</p>
                 <hr />
                 <ul>
                     <li> [Space Bar] pause and unpause</li>
@@ -26,7 +47,7 @@
                 <hr />
                 <p>
                     Rule #
-                    <input id="rule_textbox" type="text" value="30" />
+                    <input id="rule_textbox" type="text" value="129" />
                     <button type="button" id="rule_submit">Change Rule</button>
                 </p>
             </div>
