--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@ can change the rule at any step, causing the output of the previous
 rule to be the input of the next rule. This leads to discoveries and
 an enjoyable interaction with the system and sense for how it works
 that does not come from merely reading about it or watching a single
-rule play out.  -->
+rule play out.  
+
+The rules between 129 and 135 play well together. Rule 90 is a strange
+and beautiful thing: http://en.wikipedia.org/wiki/Rule_90 . 
+-->
 
 
 <html lang="en"> 
